🚚 api name 변경 review -> record
