# swagger-output.json
@@ -9,11 +9,11 @@
   "basePath": "/",
   "schemes": ["http"],
   "paths": {
-    "/reviews/": {
+    "/records/": {
       "get": {
-        "tags": ["Reviews"],
-        "summary": "리뷰 목록 조회",
-        "description": "리뷰 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 리뷰 목록을 조회할 수도 있습니다.",
+        "tags": ["records"],
+        "summary": "기록 목록 조회",
+        "description": "기록 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 기록 목록을 조회할 수도 있습니다.",
         "parameters": [
           {
             "name": "userId",
@@ -23,7 +23,7 @@
         ],
         "responses": {
           "200": {
-            "description": "리뷰 조회 성공",
+            "description": "기록 조회 성공",
             "schema": {
               "type": "array",
               "items": {
@@ -65,13 +65,9 @@
                     "type": "string",
                     "example": "1984"
                   },
-                  "reviewDetail": {
+                  "recordDetail": {
                     "type": "string",
                     "example": "A chilling dystopian novel that remains relevant today. Orwell's vision of a totalitarian future is both terrifying and thought-provoking."
-                  },
-                  "reviewOneline": {
-                    "type": "string",
-                    "example": "A must-read classic that warns of the dangers of unchecked power."
                   },
                   "isPublic": {
                     "type": "boolean",
@@ -115,12 +111,12 @@
         }
       },
       "post": {
-        "tags": ["Reviews"],
-        "summary": "리뷰 생성",
-        "description": "리뷰를 생성합니다.",
+        "tags": ["records"],
+        "summary": "기록 생성",
+        "description": "기록를 생성합니다.",
         "responses": {
           "201": {
-            "description": "리뷰 생성 성공 후 응답 값.",
+            "description": "기록 생성 성공 후 응답 값.",
             "schema": {
               "type": "object",
               "properties": {
@@ -160,11 +156,11 @@
                   "type": "string",
                   "example": "1984"
                 },
-                "reviewDetail": {
+                "recordDetail": {
                   "type": "string",
                   "example": "A chilling dystopian novel that remains relevant today. Orwell's vision of a totalitarian future is both terrifying and thought-provoking."
                 },
-                "reviewOneline": {
+                "recordOneline": {
                   "type": "string",
                   "example": "A must-read classic that warns of the dangers of unchecked power."
                 },
@@ -207,7 +203,7 @@
             }
           },
           "204": {
-            "description": "성공적으로 리뷰가 삭제됨."
+            "description": "성공적으로 기록가 삭제됨."
           },
           "400": {
             "description": "Bad Request"
@@ -218,14 +214,14 @@
         }
       }
     },
-    "/reviews/public": {
+    "/records/public": {
       "get": {
-        "tags": ["Reviews"],
-        "summary": "공개 리뷰 목록 조회",
-        "description": "공개 상태인 리뷰 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 리뷰 목록을 조회할 수도 있습니다.",
+        "tags": ["records"],
+        "summary": "공개 기록 목록 조회",
+        "description": "공개 상태인 기록 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 기록 목록을 조회할 수도 있습니다.",
         "responses": {
           "200": {
-            "description": "리뷰 조회 성공",
+            "description": "기록 조회 성공",
             "schema": {
               "type": "array",
               "items": {
@@ -267,11 +263,11 @@
                     "type": "string",
                     "example": "1984"
                   },
-                  "reviewDetail": {
+                  "recordDetail": {
                     "type": "string",
                     "example": "A chilling dystopian novel that remains relevant today. Orwell's vision of a totalitarian future is both terrifying and thought-provoking."
                   },
-                  "reviewOneline": {
+                  "recordOneline": {
                     "type": "string",
                     "example": "A must-read classic that warns of the dangers of unchecked power."
                   },
@@ -317,11 +313,11 @@
         }
       }
     },
-    "/reviews/{id}": {
+    "/records/{id}": {
       "get": {
-        "tags": ["Reviews"],
-        "summary": "리뷰 목록 조회",
-        "description": "리뷰 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 리뷰 목록을 조회할 수도 있습니다.",
+        "tags": ["records"],
+        "summary": "기록 목록 조회",
+        "description": "기록 목록을 조회합니다. userId 쿼리 파라미터를 전달하여 특정 유저가 작성한 기록 목록을 조회할 수도 있습니다.",
         "parameters": [
           {
             "name": "id",
@@ -332,7 +328,7 @@
         ],
         "responses": {
           "200": {
-            "description": "리뷰 조회 성공",
+            "description": "기록 조회 성공",
             "schema": {
               "type": "array",
               "items": {
@@ -374,11 +370,11 @@
                     "type": "string",
                     "example": "1984"
                   },
-                  "reviewDetail": {
+                  "recordDetail": {
                     "type": "string",
                     "example": "A chilling dystopian novel that remains relevant today. Orwell's vision of a totalitarian future is both terrifying and thought-provoking."
                   },
-                  "reviewOneline": {
+                  "recordOneline": {
                     "type": "string",
                     "example": "A must-read classic that warns of the dangers of unchecked power."
                   },
@@ -427,9 +423,9 @@
         }
       },
       "put": {
-        "tags": ["Reviews"],
-        "summary": "리뷰 수정",
-        "description": "경로 파라미터로 전달된 id를 가진 리뷰를 수정합니다.",
+        "tags": ["records"],
+        "summary": "기록 수정",
+        "description": "경로 파라미터로 전달된 id를 가진 기록를 수정합니다.",
         "parameters": [
           {
             "name": "id",
@@ -440,7 +436,7 @@
         ],
         "responses": {
           "200": {
-            "description": "리뷰 수정 성공 후 응답 값.",
+            "description": "기록 수정 성공 후 응답 값.",
             "schema": {
               "type": "object",
               "properties": {
@@ -480,11 +476,11 @@
                   "type": "string",
                   "example": "1984"
                 },
-                "reviewDetail": {
+                "recordDetail": {
                   "type": "string",
                   "example": "A chilling dystopian novel that remains relevant today. Orwell's vision of a totalitarian future is both terrifying and thought-provoking."
                 },
-                "reviewOneline": {
+                "recordOneline": {
                   "type": "string",
                   "example": "A must-read classic that warns of the dangers of unchecked power."
                 },
@@ -527,7 +523,7 @@
             }
           },
           "204": {
-            "description": "성공적으로 리뷰가 삭제됨."
+            "description": "성공적으로 기록가 삭제됨."
           },
           "400": {
             "description": "Bad Request"
@@ -541,9 +537,9 @@
         }
       },
       "delete": {
-        "tags": ["Reviews"],
-        "summary": "리뷰 삭제",
-        "description": "경로 파라미터로 전달받은 id를 가진 리뷰를 삭제합니다.",
+        "tags": ["records"],
+        "summary": "기록 삭제",
+        "description": "경로 파라미터로 전달받은 id를 가진 기록를 삭제합니다.",
         "parameters": [
           {
             "name": "id",
@@ -554,7 +550,7 @@
         ],
         "responses": {
           "204": {
-            "description": "성공적으로 리뷰가 삭제됨."
+            "description": "성공적으로 기록가 삭제됨."
           }
         }
       }
